--- a/server/.env
+++ b/server/.env
@@ -1,12 +1,14 @@
-MONGODB_URI="mongodb+srv://mamiditeja:meharteja32@cluster0.rmacz.mongodb.net"
+MONGODB_URI="mongodb+srv://mongo2025:gopal123@cluster0.rwtcbe2.mongodb.net"
 
 ADMIN_EMAIL=admin@example.com
-ADMIN_PASSWORD=teja
+ADMIN_PASSWORD=gopal
 
 JWT_SECRET=secret@2025
 
-IMAGEKIT_PUBLIC_KEY="public_ASlTTC9j785D7lIKyDMaDN5of6M="
-IMAGEKIT_PRIVATE_KEY="private_GhvrKlhfJY5aY0xF+COgJQWQEkw="
-IMAGEKIT_URL_ENDPOINT="https://ik.imagekit.io/tejamamidi"
+IMAGEKIT_PUBLIC_KEY="public_Wg12M5F85LNPlrRX+2JHtlZ3X44="
+IMAGEKIT_PRIVATE_KEY="private_KNHbkh81Skkl6WKmaU8RyOI1DLA="
+IMAGEKIT_URL_ENDPOINT="https://ik.imagekit.io/Gopal123/"
 
-GEMINI_API_KEY="AIzaSyAr6dpde53OX51NmJGUgMaQnzHeeIpjVGs"
+GEMINI_API_KEY="AIzaSyBIu__7AFnXkunpnKFtsAruJY3GFMigux0"
+
+
